- added fcc elements - unnested button hover for chrome - fixed nav bar z-index to make clickable

--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -3,6 +3,7 @@
     left: 10rem;
     height: 70%;
     animation-delay: 1s;
+    z-index: 10;
 }
 
 nav::before {
