--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -312,10 +312,11 @@ section>* {
 	border-radius: var(--border-radius);
 	transition: 0.3s ease-in-out;
 	
-	:hover {
-		background-color: var(--green);
-		color: var(--dark1);
-	}
+}
+
+.btn:hover {
+	background-color: var(--green);
+	color: var(--dark1);
 }
 
 /* contact grid */
@@ -371,6 +372,14 @@ p {
 	width: 40%;
 	height: auto;
 	object-fit: contain;
+}
+
+#fcc-logo {
+	width: auto;
+	height: 90%;
+	left: 1rem;
+	top: 50%;
+	transform: translate(0, -50%);
 }
 
 .grid-item:nth-of-type(2), .grid-item:nth-of-type(6) {
